--- a/src/page/css/index.less
+++ b/src/page/css/index.less
@@ -1,6 +1,6 @@
 // @import url(https://fonts.googleapis.com/css?family=Lato);
 
-body {
+.wrapper {
   display: flex;
   height: 100vh;
   justify-content: center;
