style: 静态资源文件

--- a/src/page/canvas/dynamic-logo/index.less
+++ b/src/page/canvas/dynamic-logo/index.less
@@ -1,4 +1,4 @@
-@url-prefix: '../../../src/assets';
+@url-prefix: '/src/assets';
 * {
   cursor: url('@{url-prefix}/mouse.png') 4 4, default;
   padding: 0;
