style: 静态资源文件

--- a/src/page/wave/index.less
+++ b/src/page/wave/index.less
@@ -37,7 +37,7 @@
   border-radius: 50%;
   /*开启3d加速*/
   transform: translate3d(0, 0, 0);
-  background-image: url('../../assets/5.png');
+  background-image: url('/static/5.png');
   background-position: center center;
   background-attachment: fixed;
   /*所有属性变化过渡200ms*/
